<resources>
    <string name="app_name">Via(R)Hungry</string>
    <string name="title_water">Water</string>
    <string name="title_calorie">Calories</string>
    <string name="title_history">History</string>
    <string name="cupimage">Image of cup</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="cups_250ml_of_water">1 cup of water (250ml)</string>
    <string name="food_name">food:</string>
    <string name="calories">calories</string>
    <string name="add">Add</string>
    <string name="remove_last">Remove last</string>
    <string name="_0">0</string>
    <string name="caloriesTotalPartner">Calories:</string>
    <string name="date">date</string>
    <string name="london_is_my_city">London is my city</string>
</resources>
