<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_weight="3"
        android:id="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_name" />

    <TextView
        android:layout_weight="2"
        android:id="@+id/caloriesNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0" />

    <TextView
        android:layout_weight="1"
        android:id="@+id/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories" />

</LinearLayout>