<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_water">

    <fragment
        android:id="@+id/navigation_water"
        android:name="com.example.viarhungry.ui.water.WaterFragment"
        android:label="@string/title_water"
        tools:layout="@layout/fragment_water" />

    <fragment
        android:id="@+id/navigation_calories"
        android:name="com.example.viarhungry.ui.calories.CalorieFragment"
        android:label="@string/title_calorie"
        tools:layout="@layout/fragment_calories" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.viarhungry.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>